--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </section>
         <section>
             <h2>Why this website?</h2>
-            <p>The purpose of this website is for me to practice and learn web developent / programming. In the future this is something I aim to work with. </p>
+            <p>The purpose of this website is for me to practice and learn web development / programming. In the future this is something I aim to work with. </p>
         </section>
     </body>
 </html>
