--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <section>
             
-            <img style="float: right;" src="img/profilepicblackwhite.png">
+            <img style="float: right;" src="img/profilepic2blackwhite.png" alt="Picture of Daniel Thursfield">
 
             <h2>Who am I?</h2>
 
