--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <p>Hi, and welcome to my little part of the world wide web. My name is Daniel Thursfield.</p>
         </section>
         <section>
-            <p>I'm a 40 something Swede, currently working as a night receptionist in Dennmark for a large hotel chain. </p>
+            <p>I'm a 40 something Swede, currently working as a night receptionist in Denmark for a large hotel chain. </p>
             
             <p>I'm into all things tech, video games and more or less anything related to it. Apart from that I also enjoy is running. Done a few marathons and other races in my days.</p>
         
