--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <section>
             <p>I'm a 40 something Swede, currently working as a night receptionist in Denmark for a large hotel chain. </p>
             
-            <p>I'm into all things tech, video games and more or less anything related to it. Apart from that I also enjoy is running. Done a few marathons and other races in my days.</p>
+            <p>I'm into all things tech, video games and more or less anything related to it. Apart from that I also enjoy running. Done a few marathons and other races in my days.</p>
         
         </section>
         <section>
